k8/istio/integration/grafana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - grafana.localhost
  gateways:
    - default/ingress-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 3000
