k8/istio/integration/kiali-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - kiali.localhost
  gateways:
    - default/ingress-gateway
  http:
    - route:
        - destination:
            host: kiali
            port:
              number: 20001
