k8/istio/integration/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - prometheus.localhost
  gateways:
    - default/ingress-gateway
  http:
    - route:
        - destination:
            host: prometheus
            port:
              number: 9090
