k8/istio/integration/tracing-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing
  namespace: istio-system
spec:
  hosts:
    - tracing.localhost
  gateways:
    - default/ingress-gateway
  http:
    - route:
        - destination:
            host: tracing
            port:
              number: 80
